--- a/python-unittest.conf
+++ b/python-unittest.conf
@@ -1,3 +1,4 @@
+token = 2448803337785929131975611289993038533532227282238188970
 site  = 'https://hiptest.net'
 language = 'python'
 output_directory = './src/tests'
